service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maestro-midi-player
  labels:
    app: maestro-midi-player
spec:
  selector:
    app: maestro-midi-player
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
